--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name="description" content="Do you have an outdated website or want to create a new awesome website for your business in Atlanta? Hello! I'm Mike, an Atlanta freelance web designer. By understanding your business goals I'll create a personalized design ti boost you Atlanta local business, giving it a brand identity">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
-    
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="style.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
+	
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css" media="all">
+	<link rel="stylesheet" type="text/css" href="style.min.css" media="all">
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css" media="all">
+	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css" media="all">
 	
 	<script async src="./js/jquery-2.1.0.min.js"></script>
 	<script async src="./js/bootstrap.min.js"></script>
 	<script async src="./js/blocs.min.js"></script>
 	<script async src="./js/jquery.touchSwipe.min.js"></script>
-	<script src="./js/gmaps.min.js"></script>
+	<script src="./js/gmaps.min.js" defer></script>
 
     <title>GoMike Designs - Web designer Atlanta</title>
 
@@ -35,7 +35,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.webp" alt="GoMike Atlanta Web Design logo"/></a>
+				<a class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.webp" alt="GoMike Atlanta Web Design logo" height="40"/></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -56,7 +56,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/atlanta%20web%20designer%20mike.webp" class="center-block image-resize-mode" alt="Web desginer Mike profile illustration" />
+				<img src="img/atlanta%20web%20designer%20mike.webp" class="center-block image-resize-mode" alt="Web desginer Mike profile illustration" height="103"/>
 				<h1 class="text-center hero-bloc-text tc-whitehd">
 					I'm Mike.
 				</h1>
