--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="Contact.html">Contact</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
 		</nav>
