--- a/contact.html
+++ b/contact.html
@@ -71,6 +71,7 @@
 <section class="bloc bgc-white l-bloc" id="bloc-7">
 	<div class="container bloc-lg">
 		<div class="row">
+			<h3>Contact</h3>
 			<div class="col-sm-6">
 				<form id="form_1" novalidate>
 					<div class="form-group">
@@ -117,10 +118,10 @@
 
 
 <!-- Footer - bloc-8 -->
-<section class="bloc bgc-dark-slate-blue d-bloc" id="bloc-8">
+<footer class="bloc bgc-dark-slate-blue d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
 		<div class="row">
-			<div class="col-sm-12">
+			<div class="col-sm-12">	
 				<p class="text-center white">
 					GoMike Designs - Web designer living and loving Atlanta.<br>
 				</p>
@@ -149,7 +150,7 @@
 			</div>
 		</div>
 	</div>
-</section>
+</footer>
 <!-- Footer - bloc-8 END -->
 
 </body>
