--- a/contact.html
+++ b/contact.html
@@ -70,9 +70,9 @@
 <!-- bloc-7 -->
 <section class="bloc bgc-white l-bloc" id="bloc-7">
 	<div class="container bloc-lg">
-		<div class="row"s>
+		<div class="row">
 			<div class="col-sm-6">
-				<h4>Contact</h3>
+				<h4>Contact</h4>
 				<form id="form_1" novalidate>
 					<div class="form-group">
 						<label for="name">
